--- a/package.json
+++ b/package.json
@@ -5,11 +5,28 @@
   "main": "index.html",
   "scripts": {
     "start": "http-server client",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt karma:prod"
   },
   "author": "Kiran Sachdev",
   "license": "none",
   "dependencies": {
     "http-server": "^0.9.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "grunt": "^1.0.1",
+    "grunt-karma": "^2.0.0",
+    "karma": "^1.4.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon": "^1.0.5",
+    "load-grunt-tasks": "^3.5.2",
+    "mocha": "^3.2.0",
+    "sinon": "^1.17.7"
   }
 }
